# trinity-2

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ability-trinity-git-improvements-proposal.md  docker-compose.gitea.yml  docker-compose.prod.yml  docker-compose.yml  hackathon_context.md  resources.txt  template.yaml
src/backend/config/agent-templates/professor-polygon/: .env.example  .gitignore  .mcp.json.template  CLAUDE.md  README.md  dashboard.yaml  pyproject.toml  template.yaml
src/backend/config/agent-templates/professor-polygon/.claude/skills/backtest/: SKILL.md
src/backend/config/agent-templates/professor-polygon/.claude/skills/backtest/workspace/: backtest-report.md  backtest.py
src/backend/config/agent-templates/professor-polygon/.claude/skills/cornelius-backprop/: SKILL.md
src/backend/config/agent-templates/professor-polygon/.claude/skills/cornelius-backprop/workspace/: backprop.py
src/backend/config/agent-templates/professor-polygon/.claude/skills/grade/: SKILL.md
src/backend/config/agent-templates/professor-polygon/.claude/skills/self-rewrite/: SKILL.md
src/backend/config/agent-templates/professor-polygon/adapters/: __init__.py  polygon_adapter.py
src/backend/config/agent-templates/professor-polygon/config/: rubric.yaml
src/backend/config/agent-templates/professor-polygon/process-engine/: daily-grade.yaml
src/backend/config/agent-templates/professor-polygon/src/professor_polygon/: __init__.py
src/backend/config/agent-templates/professor-polygon/tests/: test_polygon_adapter.py  test_polygon_resolver.py
(+533 files in other folders)
